--- a/tasks/opendkim.yml
+++ b/tasks/opendkim.yml
@@ -35,17 +35,25 @@
    - restart opendkim
 
 - name: ensure signing key is present
-  stat: path=/etc/opendkim/keys/{{ dkim_selector }}.private get_md5=no
+  stat: path=/etc/opendkim/keys/{{ item }}/{{ dkim_selector }}.private get_md5=no
+  with_items: dkim_domains
   register: dkim_key
 
+- name: create dirs for key
+  file: path=/etc/opendkim/keys/{{ item.item }} state=directory mode=0755
+  when: item.stat.exists == false
+  with_items: dkim_key.results
+
 - name: generate signing key
-  shell: opendkim-genkey -s {{ dkim_selector }} -d {{ dkim_domains[0] }} -D /etc/opendkim/keys
-  when: not dkim_key.stat.exists
+  shell: opendkim-genkey -s {{ dkim_selector }} -d {{ item.item }} -D /etc/opendkim/keys/{{ item.item }}
+  with_items: dkim_key.results
+  when: item.stat.exists == false
   notify:
    - restart opendkim
-
+ 
 - name: ensure signing key owner
-  file: path=/etc/opendkim/keys/{{ dkim_selector }}.private owner=opendkim group=opendkim
+  file: path=/etc/opendkim/keys/{{ item.item }}/{{ dkim_selector }}.private owner=opendkim group=opendkim
+  with_items: dkim_key.results
 
 - name: opendkim is running
   service: name=opendkim state=running enabled=yes
